# nest-demo

./: .gitignore  Makefile  README.md  docker-compose.yml  locustfile.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml
addon/: README.md  binding.gyp  package.json  pnpm-lock.yaml
addon/include/: ikcp.h
addon/src/: kcp-node.js  udp-client.js  udp-server.js  udpClient.js  udpServer.js
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  api.ts
src/: app.controller.ts  app.controller.v0.ts  app.module.ts  app.module.v0.ts  main.ts  rxjs.spec.ts  swagger.ts  uuid.spec.ts
src/common/: common.controller.ts  common.module.ts  common.service.ts
src/custom/: custom.decorator.ts
src/emp/: emp.controller.ts  emp.service.ts
src/emp/dto/: update-emp.dto.ts
src/emp/entities/: emp.entity.ts
src/err/: err.filter.ts
src/logger/: logger.middleware.ts
src/login/: login.controller.ts  login.guard.ts  login.pipe.ts  login.service.ts
src/login/dto/: create-login.dto.ts
src/login/entities/: login.entity.ts
src/people/: people.controller.ts  people.module.ts  people.service.ts
src/people/dto/: create-people.dto.ts
src/resp/: resp.interceptor.ts
src/upload/: upload.controller.ts  upload.module.ts
src/user/: user.controller.ts  user.module.ts  user.service.ts
