[project]
authors = [
  {name = "hangtiancheng", email = "hangtiancheng@bytedance.com"},
]
dependencies = [
  "locust (>=2.37.14,<3.0.0)",
]
description = ""
license = {file = "LICENSE"}
name = "nest-demo"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
